Notes Dashboard Done